tests/expectations/compiler/finalize/get_incorrect_num_operands.out
DCE_ENABLED:
Error [EPAR0370021]: The type of `tokens` has no associated function `get` that takes 2 argument(s).
    --> compiler-test:17:9
     |
  17 |         tokens.get(true, true);
     |         ^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `get` that takes 0 argument(s).
    --> compiler-test:19:9
     |
  19 |         amounts.get();
     |         ^^^^^^^^^^^^^

DCE_DISABLED:
Error [EPAR0370021]: The type of `tokens` has no associated function `get` that takes 2 argument(s).
    --> compiler-test:17:9
     |
  17 |         tokens.get(true, true);
     |         ^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370021]: The type of `amounts` has no associated function `get` that takes 0 argument(s).
    --> compiler-test:19:9
     |
  19 |         amounts.get();
     |         ^^^^^^^^^^^^^
